# high-dynamic-range-imaging

./: .gitignore  CMakeLists.txt  README.md
data/memorial/: shutterspeed.txt
source/: basicHeader.h  config.h  main.cpp  mathUtils.h  simpleHDR.cpp
source/core/: crfSolver.h  hdrSolver.cpp  hdrSolver.h  imageAligner.h  toneMapper.h
source/crfSolver/: debevecCrfSolver.cpp  debevecCrfSolver.h  debevecMethod.cpp  debevecMethod.h
source/imageAligner/: mtbImageAligner.cpp  mtbImageAligner.h
source/toneMapper/: bilateral.cpp  bilateral.h  bilateralToneMapper.cpp  bilateralToneMapper.h  photographicGlobal.cpp  photographicGlobal.h  photographicGlobalToneMapper.cpp  photographicGlobalToneMapper.h  photographicLocal.cpp  photographicLocal.h  photographicLocalToneMapper.cpp  photographicLocalToneMapper.h
